--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link type="text/css" rel="stylesheet" href="css/estilo.css">
+
 <title>Home - tituloPagina</title>
 </head>
 
