--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link type="text/css" rel="stylesheet" href="css/estilo.css">
 <title>Nosotros - tituloPagina</title>
 </head>
 
