--- a/reseña.html
+++ b/reseña.html
@@ -7,6 +7,7 @@
     <title>Untitled Document</title>
     <!-- Bootstrap -->
 	<link href="css/bootstrap.css" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="css/estilo.css">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
