--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </div>
 <div class="navbar" id="navbar">
   <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
-  <a href="#"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
-  <a href="#"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
-  <a href="#"><i class="fa fa-fw fa-user"></i> Reseñas</a>
+  <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
+  <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
+  <a href="reseña.html"><i class="fa fa-fw fa-user"></i> Reseñas</a>
 </div>
 
 <div class="container">
