--- a/Contact.html
+++ b/Contact.html
@@ -20,6 +20,7 @@
 
 <div class="container">
 	<section class="formulario">
+	<h1 class="my-3">Contacto</h1>
 		<form action="" onsubmit="return validarFormulario()">
 			<label for="nombre">Nombre:</label>
  			<input id="nombre" type="text" name="nombre" placeholder="Nombre" required="numbers" />
