--- a/reseña.html
+++ b/reseña.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Reseñas</title>
     <!-- Bootstrap -->
-	<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link type="text/css" rel="stylesheet" href="css/estilo.css">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -17,10 +17,11 @@
 		<![endif]-->
   </head>
   <body>
+  <div class="container">
 <div class="header">
 	<h1> Berserk's Comics </h1>
 </div>
-<div class="navbar" id="navbar">
+<div class="navbar container" id="navbar">
   <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
   <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
   <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
@@ -51,6 +52,7 @@
 	Nunc bibendum in nibh id varius. Nulla facilisi. Sed vel porta justo. Sed in vestibulum nulla, nec consequat orci. Etiam consectetur auctor diam, tempor faucibus odio scelerisque eget. Donec euismod est quis ante hendrerit consequat. Donec lacinia quis ante quis ultricies. Nam dolor tortor, accumsan ut eleifend ac, porta quis diam. Nunc ac purus odio. Nam finibus odio id iaculis faucibus.</p>
 	
 	<script src="js/topnav.js"></script>
+</div>
 </div>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 	<script src="js/jquery-1.11.3.min.js"></script>
