--- a/about.html
+++ b/about.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="utf-8">
 <link type="text/css" rel="stylesheet" href="css/estilo.css">
-<title>Nosotros - tituloPagina</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+<link href="css/fontawesome-all.css" type="text/css" rel="stylesheet">
+<title>Nosotros</title>
 </head>
 <body>
 <div class="header">
