--- a/reseña.html
+++ b/reseña.html
@@ -5,58 +5,20 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Reseñas</title>
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link type="text/css" rel="stylesheet" href="css/estilo.css">
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+<link href="css/fontawesome-all.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-  <div class="container">
-<div class="header">
+  <div class="header">
 	<h1> Berserk's Comics </h1>
-</div>
-<div class="navbar container" id="navbar">
+  </div>
+<div class="navbar" id="navbar">
   <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
   <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
   <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
   <a class="active" href="#"><i class="fa fa-fw fa-user"></i> Reseñas</a>
 </div>
-
-<div class="container">
-	<h1>Titulo 1</h1>
-	
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pretium consectetur arcu sed tincidunt. Donec nisl leo, pretium sit amet dolor at, vestibulum eleifend libero. Aliquam vel nulla porttitor diam pretium sodales vel ac orci. Praesent tempus orci in viverra varius. Donec euismod porttitor mi, a sollicitudin odio eleifend vel. Ut aliquam nunc quis purus consectetur posuere. Aliquam erat volutpat. Maecenas sed rhoncus erat.</p>
-	
-	<p>Cras condimentum nibh at tellus consectetur pretium. Sed mi libero, dapibus at pharetra non, viverra et erat. Proin volutpat efficitur augue, at ultricies nibh dignissim at. Maecenas eu nisi at orci cursus malesuada sed eget sapien. In posuere, nisl eget aliquam auctor, augue nisl sagittis ex, vitae dictum turpis ipsum eget justo. In pretium magna sed lacus pulvinar facilisis. Fusce pulvinar sed risus ut tincidunt. Aenean finibus ex at egestas placerat. Suspendisse pulvinar sem vel tincidunt condimentum. Aenean et diam volutpat, eleifend metus nec, faucibus odio. Proin lacus lorem, gravida nec bibendum eu, volutpat venenatis elit. Pellentesque id ex tempus ex tincidunt venenatis a in libero. Suspendisse leo mauris, feugiat id hendrerit at, auctor suscipit est. Duis ac interdum orci.</p>
-
-	<p>Proin maximus, ex convallis vestibulum dignissim, felis lorem tempor nunc, id scelerisque ante massa in libero. Aliquam erat volutpat. Vivamus sit amet tellus et mauris euismod fermentum eu a odio. Sed nec auctor dui. Pellentesque ligula nibh, viverra a ultrices sit amet, efficitur a erat. Nulla porttitor, mi in vehicula ultrices, ex metus suscipit lorem, id sagittis nisi orci a lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse nisi erat, fermentum eu sapien sit amet, suscipit ultricies dui. Pellentesque ullamcorper diam lacus, ac volutpat neque mattis non. Nam faucibus nec dolor at tempus. Quisque molestie lacinia lorem. Nam bibendum elementum sem, at feugiat lectus ullamcorper quis. Morbi eu magna pellentesque, faucibus diam eget, lacinia odio. Donec tincidunt purus leo, condimentum fermentum leo pellentesque et. Proin tempor luctus interdum. Vestibulum cursus sed diam ac mattis.</p>
-
-	<p>Mauris fringilla, nisl nec posuere fermentum, tortor tortor luctus tellus, ac blandit nibh purus a eros. Vestibulum eget ornare lacus, in auctor massa. Fusce eu lacinia tortor. Vivamus et lectus est. Nam sodales sapien eu ex viverra, quis consequat nibh semper. Maecenas quis mauris eget tortor euismod commodo. Vestibulum facilisis commodo justo posuere semper. Praesent malesuada orci turpis, quis tempus diam scelerisque eget. Nam eleifend cursus tellus in finibus. Aliquam consequat ut leo vitae maximus. Mauris malesuada nulla ut magna imperdiet congue. In tempus, nunc quis commodo ultrices, dui risus iaculis purus, ac laoreet velit elit ut metus. Vestibulum volutpat vehicula dui vel tincidunt. Suspendisse potenti. Nulla facilisis, mi eget convallis egestas, tortor ante ornare dui, a laoreet felis magna faucibus leo. Phasellus condimentum, justo sed hendrerit imperdiet, erat quam consequat nulla, non sagittis risus nibh ac orci.</p>
-
-	<p>Cras interdum tincidunt justo, in mattis ipsum. Nunc vehicula, massa iaculis efficitur mollis, ligula orci mattis neque, in sodales mauris lorem ac lacus. Vestibulum eleifend orci aliquam, cursus tortor id, pellentesque turpis. Pellentesque et arcu cursus, pretium enim sed, faucibus justo. Fusce tempor metus in auctor euismod. Donec fermentum ligula elit, molestie fermentum erat vehicula varius. Phasellus lacinia pharetra est, eu porttitor dui gravida eget. Nulla ut lectus ac urna egestas ultrices. Suspendisse vel nisl semper elit maximus posuere a id nisl. Vestibulum sit amet viverra nisi. Vivamus eget enim eu lorem consequat vulputate. Nullam velit orci, congue eget elit at, sagittis volutpat libero. Mauris in augue ac purus lacinia laoreet. Etiam varius risus et augue congue, quis placerat neque molestie. Vestibulum arcu purus, dictum vel dui ut, vulputate varius turpis.</p>
-
-	<p>Quisque bibendum a est et condimentum. Phasellus sit amet vulputate leo. Phasellus aliquam ex nisl, quis lacinia nisl efficitur at. Praesent a enim congue, molestie massa a, tincidunt sem. Maecenas ultricies metus et massa porta tincidunt. Donec efficitur vitae justo ut semper. Pellentesque nec lorem id urna blandit facilisis at nec orci. Ut est nulla, pharetra et felis id, placerat faucibus diam. Fusce eget nibh a mi rutrum placerat.</p>
-
-	<p>Curabitur vitae elit et augue ornare hendrerit et ut nisl. Donec in velit libero. Nullam convallis est eu facilisis ultricies. Quisque ac maximus felis, vel vestibulum nunc. Nullam lobortis condimentum condimentum. Nunc dictum, nisl sed dictum gravida, nunc est cursus ligula, at volutpat ligula enim vitae est. Integer varius, elit sit amet pharetra tincidunt, dolor sapien congue arcu, non venenatis nunc nisl fermentum sem. Sed velit nisi, malesuada a nibh et, accumsan congue dolor. Nunc ultricies accumsan commodo.
-
-	Vivamus et risus eget tortor ullamcorper semper in a neque. Phasellus aliquet, lacus at bibendum ullamcorper, mauris felis maximus arcu, at laoreet justo odio non nulla. Duis sit amet neque nec ipsum eleifend semper. Phasellus ligula sapien, consectetur eget vehicula ut, porta vel felis. Nunc imperdiet urna eu efficitur pharetra. Praesent nec ultricies dolor. Etiam sit amet justo lobortis, bibendum urna pretium, tristique erat. Mauris ac rutrum tortor.
-
-	Mauris in libero ultricies, aliquet diam nec, sodales magna. Morbi quam ligula, rutrum ac feugiat in, scelerisque lacinia elit. Sed rutrum mauris et congue imperdiet. Donec dignissim nisi lacinia ante fermentum, sed tristique ipsum rutrum. Duis dignissim urna libero, a consequat nibh sodales vel. Duis sit amet iaculis sem. Maecenas semper libero eleifend bibendum dignissim. Ut interdum, erat nec lacinia aliquet, nulla nulla maximus lacus, bibendum efficitur leo justo ac elit. Phasellus sed arcu finibus, cursus arcu id, iaculis diam.
-
-	Nunc bibendum in nibh id varius. Nulla facilisi. Sed vel porta justo. Sed in vestibulum nulla, nec consequat orci. Etiam consectetur auctor diam, tempor faucibus odio scelerisque eget. Donec euismod est quis ante hendrerit consequat. Donec lacinia quis ante quis ultricies. Nam dolor tortor, accumsan ut eleifend ac, porta quis diam. Nunc ac purus odio. Nam finibus odio id iaculis faucibus.</p>
-	
 	<script src="js/topnav.js"></script>
-</div>
-</div>
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-	<script src="js/jquery-1.11.3.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed --> 
-	<script src="js/bootstrap.js"></script>
-  </body>
+</body>
 </html>
