--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link type="text/css" rel="stylesheet" href="css/estilo.css">
-<link type="text/css" rel="stylesheet" href="css/slick.css">
 <link href="css/fontawesome-all.css" type="text/css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+<link type="text/css" href="css/responsiveslides.css" rel="stylesheet">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="js/responsiveslides.min.js"></script>
+<script src="js/slides.js"></script>	
 <title>Home - Berserk's Comics</title>
 </head>
 <!-- CUERPO --> 
@@ -23,10 +26,20 @@
 
 <div class="container">
 	<h1 class="my-3 left">Ultimas novedades</h1>
-	<script src="js/topnav.js"></script>
-	<script src="js/jquery-1.11.3.min.js"></script>
-	<script src="js/slick.js"></script>
-	<script src="js/slides.js"></script>
+	<div class="slides_container">
+	<ul class="rslides" id="novedades">
+	<li><img src="images/1.jpg" alt=""><p class="texto">Imagen 1</p></li>
+    <li><img src="images/2.jpg" alt=""><p class="texto">Imagen 2</p></li>
+    <li><img src="images/3.jpg" alt=""><p class="texto">Imagen 3</p></li>
+    </ul>
+    <ul class="rslides_tabs" id="lista">
+      <li><a href="#"><img src="images/1_tn.jpg" alt=""></a></li>
+      <li><a href="#"><img src="images/2_tn.jpg" alt=""></a></li>
+      <li><a href="#"><img src="images/3_tn.jpg" alt=""></a></li>
+    </ul>
+    </div>
 </div>
+	<script src="js/topnav.js"></script>
+	
 </body>
 </html>
