--- a/index.html
+++ b/index.html
@@ -1,45 +1,109 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link type="text/css" rel="stylesheet" href="css/estilo.css">
-<link href="css/fontawesome-all.css" type="text/css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-<link type="text/css" href="css/responsiveslides.css" rel="stylesheet">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="js/responsiveslides.min.js"></script>
-<script src="js/slides.js"></script>	
-<title>Home - Berserk's Comics</title>
-</head>
-<!-- CUERPO --> 
-<body>
-<div class="header">
-	<h1> Berserk's Comics </h1>
-</div>
-<div class="navbar" id="navbar">
-  <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
-  <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
-  <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
-  <a href="reseña.html"><i class="fa fa-fw fa-user"></i> Reseñas</a>
-</div>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet" href="css/estilo.css">
+        <link href="css/fontawesome-all.css" type="text/css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+        <link type="text/css" href="css/responsiveslides.css" rel="stylesheet">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script src="js/responsiveslides.min.js"></script>
+        <script src="js/slides.js"></script>	
+        <title>Home - Berserk's Comics</title>
+    </head>
+    <!-- CUERPO --> 
+    <body>
+        <div class="contenedor-principal">
+            <header>
+                <div class="header">
+                    <h1> Berserk's Comics </h1>
+                </div>
+                <div class="navbar" id="navbar">
+                    <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
+                    <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
+                    <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
+                    <a href="reseña.html"><i class="fa fa-fw fa-user"></i> Reseñas</a>
+                </div>
+            </header>
+            <section class="main">
+                <article class="articulo">
+                    <div class="portada">
+                        <img src="images/1.jpg" alt="Todavia no lo leo">
+                    </div>
+                    <h2>Hellblazer </h2>
+                    <div class="texto">
+                        <p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
+                    </div>
+                </article>
+                <div class="slides_contenedor">
+                    <h1 class="titulo">Ultimas novedades</h1>
+                    <div class="centrar">
+                        <div class="slides_container">
+                            <ul class="rslides" id="novedades">
+                                <li><img src="images/1.jpg" alt=""><p class="texto">Imagen 1</p></li>
+                                <li><img src="images/2.jpg" alt=""><p class="texto">Imagen 2</p></li>
+                                <li><img src="images/3.jpg" alt=""><p class="texto">Imagen 3</p></li>
+                            </ul>
+                            <ul class="rslides_tabs" id="lista">
+                                <li><a href="#"><img src="images/1_tn.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/2_tn.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/3_tn.jpg" alt=""></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <aside>
+                <div class="contenedor-comics">
+                    <h2>Últimos agregados</h2>
+                    <article class="aside-articulo">
+                        <div class="novedad">
+                            <img src="images/lateral1.jpg">
+                        </div>
+                    </article>
+                    <article class="aside-articulo">
+                        <div class="novedad">
 
-<div class="container">
-	<h1 class="my-3 left">Ultimas novedades</h1>
-	<div class="slides_container">
-	<ul class="rslides" id="novedades">
-	<li><img src="images/1.jpg" alt=""><p class="texto">Imagen 1</p></li>
-    <li><img src="images/2.jpg" alt=""><p class="texto">Imagen 2</p></li>
-    <li><img src="images/3.jpg" alt=""><p class="texto">Imagen 3</p></li>
-    </ul>
-    <ul class="rslides_tabs" id="lista">
-      <li><a href="#"><img src="images/1_tn.jpg" alt=""></a></li>
-      <li><a href="#"><img src="images/2_tn.jpg" alt=""></a></li>
-      <li><a href="#"><img src="images/3_tn.jpg" alt=""></a></li>
-    </ul>
-    </div>
-</div>
-	<script src="js/topnav.js"></script>
-	
-</body>
+                            <img src="images/lateral2.jpg">
+                        </div>
+
+                    </article>
+                    <article class="aside-articulo">
+                        <div class="novedad">
+
+                            <img src="images/lateral3.jpg">
+                        </div>
+
+                    </article>
+                </div>
+            </aside>
+            <footer>
+                <div class="autores">
+                    <div class="autor">
+                        <h3>Lillo, Martínuli</h3>
+                        <p class="subtitulo">Desarrollador normal y corriente</p>
+                    </div>
+                    <div class="autor">
+                        <h3>Infante, Matias Ricardo</h3>
+                        <p class="subtitulo">Desarrollador normal y corriente</p>
+                    </div>
+                    <div class="autor">
+                        <h3>Morales, Matias Matt</h3>
+                        <p class="subtitulo">Desarrollador normal y corriente</p>
+                    </div>
+                </div>
+                <div class="derechos">
+                    <p>Copyright 2018</p>
+                </div>
+            </footer>
+        </div>
+        <script src="js/topnav.js"></script>
+
+    </body>
 </html>
