--- a/Contact.html
+++ b/Contact.html
@@ -39,28 +39,49 @@
                 <h1 class="my-3">Contacto</h1>
 
                 <form action="" onsubmit="return validarFormulario()">
-                    <!--Insertar el nombre-->
-                    <label for="nombre">Nombre:</label>
-                    <input id="nombre" type="text" name="nombre" placeholder="Nombre" required="" />
 
-                    <!--Insertar el mail-->
-                    <label for="email">Email:</label>
-                    <input id="email" type="email" name="email" placeholder="ejemplo@correo.com" required="" />
+                    <div class="row">
+                        <!--Insertar el nombre-->
+                        <div class="col-25">
+                            <label for="nombre">Nombre:</label>
+                        </div>
 
-                    <!--Insertar Texto-->
-                    <label for="mensaje">Mensaje:</label>
+                        <div class="col-75">
+                            <input id="nombre" type="text" name="nombre" placeholder="Nombre" required="" />
+                        </div>
+
+                    </div>
 
 
-                    <textarea id="mensaje" name="mensaje" placeholder="Mensaje" required></textarea>
+                    <div class="row">
+                        <!--Insertar el mail-->
+                        <div class="col-25">
+                            <label for="email">Email:</label>
+                        </div>
+                        <div class="col-75">
+                            <input id="email" type="email" name="email" placeholder="ejemplo@correo.com" required="" />
+                        </div>
+                    </div>
 
+                    <div class="row">
+                        <!--Insertar Texto-->
+                        <div class="col-25">
+                            <label for="mensaje">Mensaje:</label>
+                        </div>
+                        <div class="col-75">
+                            <textarea id="mensaje" name="mensaje" placeholder="Mensaje" required></textarea>
+                        </div>
+                    </div>
                     <!--Boton enviar-->
-                    <input id="submit" type="submit" name="submit" value="Enviar" />
+                    <div class="row">
+                        <input id="submit" type="submit" name="submit" value="Enviar" />
+                    </div>
                 </form>
 
             </section>
 
-            
-            
+
+
 
 
             <script src="js/validacionFormulario.js"></script>
