se habia borrado el favicon del home

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script src="js/responsiveslides.min.js"></script>
         <script src="js/slides.js"></script>	
-
+         <!--favicon-->
+        <link rel="icon" href="images/home.png">
         <title>Home - Berserk's Comics</title>
     </head>
     <!-- CUERPO --> 
