Adding topnav.js

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 		</div>
         <!--favicon-->
         <link rel="icon" href="images/home.png">
+		<script src="js/topnav.js" type="text/javascript"></script>
 			</body>
 
 </html>
