Minor fixes, again

--- a/Contact.html
+++ b/Contact.html
@@ -21,19 +21,20 @@
 
 
     <body>
-
+<div class="contenedor-principal">
+       <header>
         <div class="header">
-            <h1> Berserk's Comics </h1>
+            <h1 class="titulo"> Berserk's Comics </h1>
         </div>
-
+		
         <div class="navbar" id="navbar">
             <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
             <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
             <a class="active" href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
             <a href="reseña.html"><i class="fa fa-fw fa-user"></i> Reseñas</a>
         </div>
-
-        <div class="container">
+		</header>
+        <div class="contenedor">
             <section class="formulario">
                 <!--Titulo del Formulario -->
                 <h1 class="my-3">Contacto</h1>
@@ -80,15 +81,29 @@
                 </form>
 
             </section>
-
-
-
-
-
-            <script src="js/validacionFormulario.js"></script>
+            </div>
+            <footer>
+                <div class="autores">
+                    <div class="autor">
+                        <h3>Lillo, Martínuli</h3>
+                        <p class="subtitulo">Desarrollador normal y corriente</p>
+                    </div>
+                    <div class="autor">
+                        <h3>Infante, Matias Ricardo</h3>
+                        <p class="subtitulo">Desarrollador normal y corriente</p>
+                    </div>
+                    <div class="autor">
+                        <h3>Morales, Matias Matt</h3>
+                        <p class="subtitulo">Desarrollador normal y corriente</p>
+                    </div>
+                </div>
+                <div class="derechos">
+                    <p>Copyright 2018</p>
+                </div>
+            </footer>
+	        <script src="js/validacionFormulario.js"></script>
             <script src="js/topnav.js"></script>
         </div>
-
     </body>
 
 </html>
