--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="contenedor-principal">
             <header>
                 <div class="header">
-                    <h1> Berserk's Comics </h1>
+                    <h1 class="titulo"> Berserk's Comics </h1>
                 </div>
                 <div class="navbar" id="navbar">
                     <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
