--- a/reseña.html
+++ b/reseña.html
@@ -19,8 +19,10 @@
 
 
     <body> 
+       <div class="contenedor-principal">
+       <header>
         <div class="header">
-            <h1> Berserk's Comics </h1>
+            <h1 class="titulo"> Berserk's Comics </h1>
         </div>
         <div class="navbar" id="navbar">
             <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
@@ -28,6 +30,8 @@
             <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
             <a class="active" href="#"><i class="fa fa-fw fa-user"></i> Reseñas</a>
         </div>
+        </header>
+		</div>
         <script src="js/topnav.js"></script>
     </body>
 </html>
