--- a/about.html
+++ b/about.html
@@ -19,8 +19,10 @@
 
     <body>
         <!--Encabezado-->
+        <div class="contenedor-principal">
+        <header>
         <div class="header">
-            <h1> Berserk's Comics </h1>
+            <h1 class="titulo"> Berserk's Comics </h1>
         </div>
 
         <div class="navbar" id="navbar">
@@ -29,11 +31,11 @@
             <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
             <a href="reseña.html"><i class="fa fa-fw fa-user"></i> Reseñas</a>
         </div>
+</header>
 
+        <div class="contenedor">
 
-        <div class="container">
-
-            <h1 class="my-3">Sobre Nosotros</h1>
+            <h1 class="my-3 centrar">¿Quienes somos?</h1>
 
             <div class="row">
 
@@ -42,7 +44,7 @@
                     <img src="images/matt.png" alt="matt" style="width:100%">
                     <h1>Matias Morales</h1>
                     <p class="title">CEO & Founder, Example</p>
-                    <p>University of Comahüe</p>
+                    <p>University of Comahue</p>
                     <a href="#"><i class="fa fa-dribbble"></i></a> 
                     <a href="#"><i class="fa fa-twitter"></i></a> 
                     <a href="#"><i class="fa fa-linkedin"></i></a> 
@@ -54,7 +56,7 @@
                     <img src="images/mati.png" alt="mati" style="width:100%">
                     <h1>Matias Infante</h1>
                     <p class="title">CEO & Founder, Example</p>
-                    <p>University of Comahüe</p>
+                    <p>University of Comahue</p>
                     <a href="#"><i class="fa fa-dribbble"></i></a> 
                     <a href="#"><i class="fa fa-twitter"></i></a> 
                     <a href="#"><i class="fa fa-linkedin"></i></a> 
@@ -66,7 +68,7 @@
                     <img src="images/martin.png" alt="martin" style="width:100%">
                     <h1>Martin Lillo</h1>
                     <p class="title">CEO & Founder, Example</p>
-                    <p>University of Comahüe</p>
+                    <p>University of Comahue</p>
                     <a href="#"><i class="fa fa-dribbble"></i></a> 
                     <a href="#"><i class="fa fa-twitter"></i></a> 
                     <a href="#"><i class="fa fa-linkedin"></i></a> 
@@ -83,7 +85,7 @@
             <script src="js/topnav.js"></script>
 
         </div>
-
+</div>
 
 
     </body>
